--- a/src/EventBundle/Resources/views/Event/details.html.twig
+++ b/src/EventBundle/Resources/views/Event/details.html.twig
@@ -1,62 +1,60 @@
 {% extends 'EventBundle:Event:events.html.twig' %}
+{% block stylesheets %}
+    <link href="{{ asset ('event/css/comment.css') }}" rel="stylesheet" type="text/css" media="all" />
+{% endblock %}
 {% block home %}
     {{ tag }}
 {% endblock %}
 {% block eventBody %}
-    <div class="product-price1">
-        <div class="top-sing">
-            <div class="col-md-7 single-top">
-                <div class="flexslider">
-                    <ul class="slides">
-                        <li data-thumb="images/si.jpg">
-                            <div class="thumb-image"> <img src="images/si.jpg" data-imagezoom="true" class="img-responsive" alt=""/> </div>
-                        </li>
-                        <li data-thumb="images/si2.jpg">
-                            <div class="thumb-image"> <img src="images/si2.jpg" data-imagezoom="true" class="img-responsive" alt=""/> </div>
-                        </li>
-                        <li data-thumb="images/si3.jpg">
-                            <div class="thumb-image"> <img src="images/si3.jpg" data-imagezoom="true" class="img-responsive" alt=""/> </div>
-                        </li>
-                    </ul>
+    <div class="col-md-6 span_2_of_3">
+    </div>
+        <div class="col-md-6 span_3_of_3">
+        <div class="comments">
+            <div class="comment-wrap">
+                <div class="photo">
+                    <div class="avatar" style="background-image: url('https://s3.amazonaws.com/uifaces/faces/twitter/dancounsell/128.jpg')"></div>
                 </div>
-                <script src="js/imagezoom.js"></script>
-                <script defer src="js/jquery.flexslider.js"></script>
-                <script>
-                    // Can also be used with $(document).ready()
-                    $(window).load(function() {
-                        $('.flexslider').flexslider({
-                            animation: "slide",
-                            controlNav: "thumbnails"
-                        });
-                    });
-                </script>
-
+                <div class="comment-block">
+                    <form action="">
+                        <textarea name="" id="" cols="30" rows="3" placeholder="Add comment..."></textarea>
+                    </form>
+                </div>
             </div>
-            <div class="col-md-5 single-top-in simpleCart_shelfItem">
-                <div class="single-para ">
-                    <h4>Lighting Wood Carved Mop Glass Double Wall Lamp </h4>
-                    <h5 class="item_price">$ 500.00</h5>
-                    <p class="para">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, Vivamus porttitor tincidunt elementum nisi a, euismod rhoncus urna. Curabitur scelerisque vulputate diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat </p>
-                    <div class="prdt-info-grid">
-                        <ul>
-                            <li>- Brand : Fos Lighting</li>
-                            <li>- Dimensions : (LXBXH) in cms of...</li>
-                            <li>- Color : Brown</li>
-                            <li>- Material : Wood</li>
+
+            <div class="comment-wrap">
+                <div class="photo">
+                    <div class="avatar" style="background-image: url('https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg')"></div>
+                </div>
+                <div class="comment-block">
+                    <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto temporibus iste nostrum dolorem natus recusandae incidunt voluptatum. Eligendi voluptatum ducimus architecto tempore, quaerat explicabo veniam fuga corporis totam reprehenderit quasi
+                        sapiente modi tempora at perspiciatis mollitia, dolores voluptate. Cumque, corrupti?</p>
+                    <div class="bottom-comment">
+                        <div class="comment-date">Aug 24, 2014 @ 2:35 PM</div>
+                        <ul class="comment-actions">
+                            <li class="complain">Complain</li>
+                            <li class="reply">Reply</li>
                         </ul>
                     </div>
-                    <div class="check">
-                        <p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>Enter pin code for delivery &amp; availability</p>
-                        <form class="navbar-form">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Enter Pin code">
-                            </div>
-                            <button type="submit" class="btn btn-default">Verify</button>
-                        </form>
+                </div>
+            </div>
+
+            <div class="comment-wrap">
+                <div class="photo">
+                    <div class="avatar" style="background-image: url('https://s3.amazonaws.com/uifaces/faces/twitter/felipenogs/128.jpg')"></div>
+                </div>
+                <div class="comment-block">
+                    <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto temporibus iste nostrum dolorem natus recusandae incidunt voluptatum. Eligendi voluptatum ducimus architecto tempore, quaerat explicabo veniam fuga corporis totam.</p>
+                    <div class="bottom-comment">
+                        <div class="comment-date">Aug 23, 2014 @ 10:32 AM</div>
+                        <ul class="comment-actions">
+                            <li class="complain">Complain</li>
+                            <li class="reply">Reply</li>
+                        </ul>
                     </div>
-                    <a href="#" class="add-cart item_add">ADD TO CART</a>
                 </div>
             </div>
         </div>
+
+    </div>
     </div>
 {% endblock %}
